[package]
name = "rocksdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocksdb.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
comfy-table.workspace = true
rustyline.workspace = true
colored.workspace = true
rustyrepl.workspace = true
unescaper.workspace = true