[package]
name = "rustyrepl"
version.workspace = true
edition.workspace = true

[features]
async = ["async-trait"]
default = []

[dependencies]
# Required dependencies
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
rustyline.workspace = true
colored.workspace = true
dirs = "2"
log = { version = "0.4", features = ["kv_unstable"] }

# Optional dependencies
async-trait = { version = "0.1", optional = true }
shlex = "1.3.0"
shell-words = "1.1.0"

[dev-dependencies]
colored.workspace = true
ctor = "0.1"
once_cell = "1"
tempfile = "3"
thread-id = "3"
tokio = { version = "1", features = ["full"] }
